# P1RV

./: .gitignore  BoxCollider.h  BoxCollider.hpp  CMakeLists.txt  Collider.h  Collider.hpp  Component.h  Component.hpp  CubeRenderer.cpp  CubeRenderer.h  CubeRenderer.hpp  EventHandler.cpp  EventHandler.hpp  Game.cpp  GameObject.cpp  GameObject.h  GameObject.hpp  MatrixStack.cpp  MatrixStack.hpp  MeshRenderer.cpp  MeshRenderer.h  MeshRenderer.hpp  ModelRenderer.cpp  ModelRenderer.h  Player.cpp  Player.hpp  README.md  Renderer.h  Renderer.hpp  Scene.cpp  Scene.h  Scene.hpp  Shader.cpp  Shader.hpp  TestEnemyIA.cpp  TestEnemyIA.hpp  TestScene.cpp  TestScene.h  TestScene.hpp  Transform.cpp  (+3 more)
component/: BoxCollider.cpp  BoxCollider.hpp  Collider.hpp  Component.hpp  CubeRenderer.cpp  EventHandler.cpp  Game.hpp  GroupCollider.cpp  GroupCollider.hpp  MeshRenderer.cpp  MeshRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  NavMesh.cpp  NavMesh.hpp  NavMeshNavigator.cpp  NavMeshNavigator.hpp  Navmesh.cpp  Navmesh.hpp  PlayerScript.cpp  PlayerScript.hpp  RelicScript.cpp  RelicScript.hpp  Renderer.hpp  Script.hpp  SkyboxScript.cpp  SkyboxScript.hpp  TestEnemyScript.cpp  TestEnemyScript.hpp  Transform.cpp  Transform.hpp
models/: Penguin.mtl  Relic.mtl  labyrinth.blend  labyrinth.mtl  navmesh.blend  navmesh.mtl  skybox.mtl
models/cube/: cube.gltf
models/enemy/: MechaGolem.mtl
models/level/: level.mtl  levelcollisions.blend  levelcollisions.mtl  navmesh.blend
models/level/Package/: LargeBuilding01.mtl  SmallBuilding01.mtl  SmallBuilding02.mtl  SmallBuilding03.mtl  SmallBuilding04.mtl  TallBuilding01.mtl  TallBuilding02.mtl  TallBuilding03.mtl  TinyBuilding01.mtl
scene/: Scene.cpp  Scene.hpp  TestScene.cpp
shaders/: frag.glsl  vertex.glsl
sounds/: LICENSE.txt
